--- a/style.css
+++ b/style.css
@@ -8,3 +8,16 @@ margin{
 html {
     font-size: 62.5%;
   }
+  
+  .hamburger-menu {
+    width: 3rem;
+    height: 3rem;
+    position: fixed;
+    top: 5rem;
+    right: 5rem;
+    z-index: 200;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+  }
