--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ margin{
 html {
     font-size: 62.5%;
   }
-  
+
   .hamburger-menu {
     width: 3rem;
     height: 3rem;
@@ -21,3 +21,12 @@ html {
     justify-content: space-evenly;
     cursor: pointer;
   }
+  
+  
+.line {
+    width: 100%;
+    height: 0.2rem;
+    background-color: #fff;
+    box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
+  }
+  
