--- a/style.css
+++ b/style.css
@@ -29,4 +29,12 @@ html {
     background-color: #fff;
     box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
   }
+
   
+.header {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    perspective: 100rem;
+    overflow: hidden;
+  }
