--- a/style.css
+++ b/style.css
@@ -44,3 +44,11 @@ html {
     background-color: rgba(0, 0, 0, 0.8);
     overflow: hidden;
   }
+  .img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: scale 25s;
+  }
+  
