--- a/style.css
+++ b/style.css
@@ -51,4 +51,11 @@ html {
     opacity: 0.5;
     animation: scale 25s;
   }
-  
+  @keyframes scale {
+    0% {
+      transform: scale(1.3);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
