--- a/style.css
+++ b/style.css
@@ -64,3 +64,15 @@ html {
     top: 30%;
     left: 15%;
   }
+  .banner h1 {
+    font-family: "Baloo Da 2", serif;
+    font-size: 8rem;
+    font-weight: 300;
+    color: #fff;
+    width: 50%;
+    line-height: 9rem;
+    letter-spacing: 0.2rem;
+    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
+  }
