--- a/style.css
+++ b/style.css
@@ -76,3 +76,14 @@ html {
     opacity: 0;
     animation: moveBanner 1s 0.5s forwards;
   }
+  .banner p {
+    font-family: "Joselin Slab", serif;
+    font-size: 4rem;
+    color: #fff;
+    width: 70%;
+    letter-spacing: 0.1rem;
+    margin-bottom: 3rem;
+    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
+  }
