--- a/style.css
+++ b/style.css
@@ -96,3 +96,4 @@ html {
     font-size: 2rem;
     text-transform: uppercase;
     color: #fff;
+    text-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
