--- a/style.css
+++ b/style.css
@@ -98,3 +98,4 @@ html {
     color: #fff;
     text-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
     box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
+    cursor: pointer;
