--- a/style.css
+++ b/style.css
@@ -99,3 +99,4 @@ html {
     text-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
     box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
     cursor: pointer;
+    opacity: 0;
