--- a/style.css
+++ b/style.css
@@ -100,3 +100,5 @@ html {
     box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
     cursor: pointer;
     opacity: 0;
+    animation: moveBanner 1s 0.9s forwards;
+}
