--- a/style.css
+++ b/style.css
@@ -102,3 +102,12 @@ html {
     opacity: 0;
     animation: moveBanner 1s 0.9s forwards;
 }
+@keyframes moveBanner {
+    0% {
+      transform: translateY(40rem) rotateY(-20deg);
+    }
+    100% {
+      transform: translateY(0) rotateY(0);
+      opacity: 1;
+    }
+  }
