--- a/style.css
+++ b/style.css
@@ -111,3 +111,12 @@ html {
       opacity: 1;
     }
   }
+  .sidebar {
+    width: 40rem;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+  }
+  
