--- a/style.css
+++ b/style.css
@@ -120,3 +120,10 @@ html {
     background-color: #fff;
   }
   
+  .menu {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50% -50%);
+  }
+  
