--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-margin {
+*{margin :0;
   padding: 0;
   outline: none;
   box-sizing: border-box;
@@ -20,14 +20,25 @@ html {
   flex-direction: column;
   justify-content: space-evenly;
   cursor: pointer;
+  transition: 0.7s; ;
 }
+.change .hamburger-menu{ right:33rem; }
 
 .line {
   width: 100%;
   height: 0.2rem;
   background-color: #fff;
   box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
+
 }
+
+.line{background-color: rgba(0, 0, 0, 0.8);}
+
+.line-1{transform: rotate(45deg)translate(0.3rem, 0.8rem);}
+
+.line-2{opacity: 0;
+visibility: hidden;}
+
 
 .header {
   width: 100%;
@@ -114,15 +125,17 @@ html {
   height: 100vh;
   position: fixed;
   top: 0;
-  right: 0;
+  right: -40rem;
   background-color: #fff;
+  transition:right 0.5s;
 }
+.change .sidebar{right:0 ;}
 
 .menu {
   position: absolute;
   top: 40%;
   left: 50%;
-  transform: translate(-50% -50%);
+  transform: translate(-50%, -50%);
 }
 .menu-item {
   text-align: center;
