--- a/style.css
+++ b/style.css
@@ -32,13 +32,14 @@ html {
 
 }
 
-.line{background-color: rgba(0, 0, 0, 0.8);}
+.change .line{background-color: rgba(0, 0, 0, 0.8);}
 
-.line-1{transform: rotate(45deg)translate(0.3rem, 0.8rem);}
+ .change .line-1{transform: rotate(45deg)translate(0.3rem, 0.8rem);}
 
-.line-2{opacity: 0;
+.change .line-2{opacity: 0;
 visibility: hidden;}
 
+.change .line-3{transform: rotate(-45deg)translate(0.3rem, -0.8rem);}
 
 .header {
   width: 100%;
