--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-*{margin :0;
+* {
+  margin: 0;
   padding: 0;
   outline: none;
   box-sizing: border-box;
@@ -20,26 +21,60 @@ html {
   flex-direction: column;
   justify-content: space-evenly;
   cursor: pointer;
-  transition: 0.7s; ;
+  transition: 0.7s;
 }
-.change .hamburger-menu{ right:33rem; }
+.change .hamburger-menu {
+  right: 33rem;
+}
 
 .line {
   width: 100%;
   height: 0.2rem;
   background-color: #fff;
   box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
-
 }
 
-.change .line{background-color: rgba(0, 0, 0, 0.8);}
+.change .line {
+  background-color: rgba(0, 0, 0, 0.8);
+}
 
- .change .line-1{transform: rotate(45deg)translate(0.3rem, 0.8rem);}
+.change .line-1 {
+  transform: rotate(45deg) translate(0.3rem, 0.8rem);
+}
 
-.change .line-2{opacity: 0;
-visibility: hidden;}
+.change .line-2 {
+  opacity: 0;
+  visibility: hidden;
+}
 
-.change .line-3{transform: rotate(-45deg)translate(0.3rem, -0.8rem);}
+.change .line-3 {
+  transform: rotate(-45deg) translate(0.3rem, -0.8rem);
+}
+.hamburger-menu span {
+  position: absolute;
+  left: 5rem;
+  width: 10rem;
+  height: 4rem;
+  background-color: #e2b646;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-family: "Baloo Da 2", serif;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+}
+.hamburger-menu span::before {
+  content: "";
+  position: absolute;
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid #e2b646;
+  border-bottom: 1rem solid transparent;
+  border-top: 1rem solid transparent;
+  top: 50%;
+  left: -2rem;
+  transform: translateY(-50%);
+}
 
 .header {
   width: 100%;
@@ -128,9 +163,11 @@ visibility: hidden;}
   top: 0;
   right: -40rem;
   background-color: #fff;
-  transition:right 0.5s;
+  transition: right 0.5s;
 }
-.change .sidebar{right:0 ;}
+.change .sidebar {
+  right: 0;
+}
 
 .menu {
   position: absolute;
@@ -170,18 +207,18 @@ visibility: hidden;}
   justify-content: center;
 }
 .social-media i {
-    font-size: 2.2rem;
-    margin: 3rem;
-    width: 4.5rem;
-    height: 4.5rem;
-    background-color: #777;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    transition: background-color 0.3s;
-  }
-  .social-media i:hover {
-    background-color: #C29525;
-  }
+  font-size: 2.2rem;
+  margin: 3rem;
+  width: 4.5rem;
+  height: 4.5rem;
+  background-color: #777;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: background-color 0.3s;
+}
+.social-media i:hover {
+  background-color: #c29525;
+}
