--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@ html {
 .change .line-3 {
   transform: rotate(-45deg) translate(0.3rem, -0.8rem);
 }
-.hamburger-menu span {
+
+.hamburger-menu span
+ {
   position: absolute;
   left: 5rem;
   width: 10rem;
@@ -63,7 +65,15 @@ html {
   font-family: "Baloo Da 2", serif;
   font-size: 1.6rem;
   letter-spacing: 0.1rem;
+  opacity: 0;
+  visibility: hidden;
 }
+
+.change .hamburger-menu:hover span {
+  opacity: 1;
+  visibility: visible;
+}
+
 .hamburger-menu span::before {
   content: "";
   position: absolute;
