--- a/style.css
+++ b/style.css
@@ -51,8 +51,7 @@ html {
   transform: rotate(-45deg) translate(0.3rem, -0.8rem);
 }
 
-.hamburger-menu span
- {
+.hamburger-menu span {
   position: absolute;
   left: 5rem;
   width: 10rem;
@@ -229,6 +228,52 @@ html {
   border-radius: 50%;
   transition: background-color 0.3s;
 }
+
 .social-media i:hover {
   background-color: #c29525;
 }
+
+.about-us {
+  width: 100%;
+  background-color: #f5f5f5;
+  padding-bottom: 15rem;
+}
+
+.section-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 7rem 0 10rem 0;
+}
+
+.section-heading {
+  font-family: "muli", sans-serif;
+  font-size: 5rem;
+  font-weight: 500;
+  color: #4b4b4b;
+  margin-bottom: 6rem;
+}
+
+.underline {
+  width: 12rem;
+  height: 0.3rem;
+  background-color: #c29525;
+}
+
+.services{width: 100;
+height: 100;
+display: grid;
+grid-template-columns: repeat(16, 1fr);
+grid-template-rows: repeat(6, 6rem);
+grid-row-gap: 4rem;
+
+}
+.services:nth-child(1){grid-column: 4/7;
+grid-row: 1/3;
+}
+.services:nth-child(2){grid-column: 4/7;
+  grid-row: 1/3;
+  }
+
+
+.about-us-img-wrapper{width: 50rem;}
