--- a/style.css
+++ b/style.css
@@ -271,9 +271,18 @@ grid-row-gap: 4rem;
 .services:nth-child(1){grid-column: 4/7;
 grid-row: 1/3;
 }
-.services:nth-child(2){grid-column: 4/7;
-  grid-row: 1/3;
+.services:nth-child(2){grid-column: 3/6;
+  grid-row: 3/5;
   }
+
+  .services:nth-child(3){grid-column: 4/7;
+    grid-row: 5/-1;
+
+    }
+    .services:nth-child(4){grid-column: 11/14;
+      grid-row: 1/3;
+      }
+      
 
 
 .about-us-img-wrapper{width: 50rem;}
