--- a/style.css
+++ b/style.css
@@ -282,7 +282,10 @@ grid-row: 1/3;
     .services:nth-child(4){grid-column: 11/14;
       grid-row: 1/3;
       }
-      
+
+      .services:nth-child(5){grid-column: 12/15;
+        grid-row: 3/5;
+        }
 
 
 .about-us-img-wrapper{width: 50rem;}
