--- a/style.css
+++ b/style.css
@@ -260,35 +260,48 @@ html {
   background-color: #c29525;
 }
 
-.services{width: 100;
-height: 100;
-display: grid;
-grid-template-columns: repeat(16, 1fr);
-grid-template-rows: repeat(6, 6rem);
-grid-row-gap: 4rem;
-
+.services {
+  width: 100;
+  height: 100;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(6, 6rem);
+  grid-row-gap: 4rem;
 }
-.services:nth-child(1){grid-column: 4/7;
-grid-row: 1/3;
+.services:nth-child(1) {
+  grid-column: 4/7;
+  grid-row: 1/3;
 }
-.services:nth-child(2){grid-column: 3/6;
+.services:nth-child(2) {
+  grid-column: 3/6;
   grid-row: 3/5;
-  }
+}
 
-  .services:nth-child(3){grid-column: 4/7;
-    grid-row: 5/-1;
+.services:nth-child(3) {
+  grid-column: 4/7;
+  grid-row: 5/-1;
+}
+.services:nth-child(4) {
+  grid-column: 11/14;
+  grid-row: 1/3;
+}
 
-    }
-    .services:nth-child(4){grid-column: 11/14;
-      grid-row: 1/3;
-      }
+.services:nth-child(5) {
+  grid-column: 12/15;
+  grid-row: 3/5;
+}
+.services:nth-child(6) {
+  grid-column: 11/14;
+  grid-row: 5/-1;
+}
 
-      .services:nth-child(5){grid-column: 12/15;
-        grid-row: 3/5;
-        }
-        .services:nth-child(6){grid-column: 11/14;
-          grid-row: 5/-1;
-          }
-
-
-.about-us-img-wrapper{width: 50rem;}
+.about-us-img-wrapper{
+  grid-column: 7/11;
+  grid-row:2/6 ;
+  width: 100%;
+}
+.about-us-img-wrapper {
+  width: 1000rem;
+  object-fit: cover;
+  opacity:0.8 ;
+}
