--- a/style.css
+++ b/style.css
@@ -232,76 +232,77 @@ html {
 .social-media i:hover {
   background-color: #c29525;
 }
-
 .about-us {
   width: 100%;
   background-color: #f5f5f5;
   padding-bottom: 15rem;
 }
-
 .section-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 7rem 0 10rem 0;
 }
-
 .section-heading {
-  font-family: "muli", sans-serif;
+  font-family: "Mulish", serif;
   font-size: 5rem;
-  font-weight: 500;
+  font-weight: 300;
   color: #4b4b4b;
   margin-bottom: 6rem;
 }
-
 .underline {
   width: 12rem;
   height: 0.3rem;
   background-color: #c29525;
 }
-
 .services {
-  width: 100;
-  height: 100;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(6, 6rem);
   grid-row-gap: 4rem;
 }
-.services:nth-child(1) {
+.service {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+.service:nth-child(1) {
   grid-column: 4/7;
   grid-row: 1/3;
 }
-.services:nth-child(2) {
+.service:nth-child(2) {
   grid-column: 3/6;
   grid-row: 3/5;
 }
-
-.services:nth-child(3) {
+.service:nth-child(3) {
   grid-column: 4/7;
   grid-row: 5/-1;
 }
-.services:nth-child(4) {
+.service:nth-child(4) {
   grid-column: 11/14;
   grid-row: 1/3;
 }
-
-.services:nth-child(5) {
+.service:nth-child(5) {
   grid-column: 12/15;
   grid-row: 3/5;
 }
-.services:nth-child(6) {
+.service:nth-child(6) {
   grid-column: 11/14;
   grid-row: 5/-1;
 }
-
-.about-us-img-wrapper{
-  grid-column: 7/11;
-  grid-row:2/6 ;
-  width: 100%;
+.service-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 .about-us-img-wrapper {
-  width: 1000rem;
+  grid-column: 7/11;
+  grid-row: 2/6;
+  width: 100%;
+}
+.about-us-img-wrapper img {
+  width: 100%;
   object-fit: cover;
-  opacity:0.8 ;
+  opacity: 0.8;
 }
