--- a/style.css
+++ b/style.css
@@ -232,30 +232,30 @@ html {
 .social-media i:hover {
   background-color: #c29525;
 }
-.about-us {
+.about-us{
   width: 100%;
-  background-color: #f5f5f5;
+  background-color: #F5F5F5;
   padding-bottom: 15rem;
 }
-.section-header {
+.section-header{
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 7rem 0 10rem 0;
 }
-.section-heading {
-  font-family: "Mulish", serif;
+.section-heading{
+  font-family: 'Mulish', serif;
   font-size: 5rem;
-  font-weight: 800;
-  color: #4b4b4b;
+  font-weight: 300;
+  color: #4B4B4B;
   margin-bottom: 6rem;
 }
-.underline {
+.underline{
   width: 12rem;
-  height: 0.3rem;
-  background-color: #c29525;
+  height: .3rem;
+  background-color: #C29525;
 }
-.services {
+.services{
   width: 100%;
   height: 100%;
   display: grid;
@@ -263,46 +263,62 @@ html {
   grid-template-rows: repeat(6, 6rem);
   grid-row-gap: 4rem;
 }
-.service {
+.service{
   width: 100%;
   margin-bottom: 2rem;
 }
-.service:nth-child(1) {
+.service:nth-child(1){
   grid-column: 4/7;
-  grid-row: 1/3;
+grid-row: 1/3;
 }
-.service:nth-child(2) {
+.service:nth-child(2){
   grid-column: 3/6;
-  grid-row: 3/5;
+grid-row: 3/5;
 }
-.service:nth-child(3) {
+.service:nth-child(3){
   grid-column: 4/7;
-  grid-row: 5/-1;
+grid-row: 5/-1;
 }
-.service:nth-child(4) {
+.service:nth-child(4){
   grid-column: 11/14;
-  grid-row: 1/3;
+grid-row: 1/3;
 }
-.service:nth-child(5) {
+.service:nth-child(5){
   grid-column: 12/15;
-  grid-row: 3/5;
+grid-row: 3/5;
 }
-.service:nth-child(6) {
+.service:nth-child(6){
   grid-column: 11/14;
-  grid-row: 5/-1;
+grid-row: 5/-1;
 }
-.service-header {
+.service-header{
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
 }
-.about-us-img-wrapper {
+.about-us-img-wrapper{
   grid-column: 7/11;
   grid-row: 2/6;
   width: 100%;
 }
-.about-us-img-wrapper img {
+.about-us-img-wrapper img{
   width: 100%;
   object-fit: cover;
   opacity: 0.8;
 }
+
+.section-header{display: flex;
+  align-items: center;
+  margin-bottom: 1rem;}
+
+.section-header i{font-size:3rem;
+  color: #4b4b4b;
+  margin-right: 2rem;
+  }
+  
+  .section-header h3 {font-family: 'Baloo Da 2 ',serif;
+  font-size: 2.6rem;
+  line-height: 2.6rem;
+  font-weight: 400;
+  margin-bottom: 2rem;
+  }
