--- a/style.css
+++ b/style.css
@@ -322,3 +322,9 @@ grid-row: 5/-1;
   font-weight: 400;
   margin-bottom: 2rem;
   }
+
+  .service-text{font-family: 'josefin stab',serif;
+  font-size: 1.6rem;
+  text-align: justify;  
+
+  }
