--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 html {
   font-size: 62.5%;
 }
-
 .hamburger-menu {
   width: 3rem;
   height: 3rem;
@@ -21,42 +20,36 @@ html {
   flex-direction: column;
   justify-content: space-evenly;
   cursor: pointer;
-  transition: 0.7s;
+  transition: right 0.7s;
 }
 .change .hamburger-menu {
   right: 33rem;
 }
-
 .line {
   width: 100%;
   height: 0.2rem;
   background-color: #fff;
   box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
 }
-
 .change .line {
   background-color: rgba(0, 0, 0, 0.8);
 }
-
 .change .line-1 {
   transform: rotate(45deg) translate(0.3rem, 0.8rem);
 }
-
 .change .line-2 {
   opacity: 0;
   visibility: hidden;
 }
-
 .change .line-3 {
   transform: rotate(-45deg) translate(0.3rem, -0.8rem);
 }
-
 .hamburger-menu span {
   position: absolute;
   left: 5rem;
   width: 10rem;
   height: 4rem;
-  background-color: #e2b646;
+  background-color: #E2B646;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,25 +59,23 @@ html {
   letter-spacing: 0.1rem;
   opacity: 0;
   visibility: hidden;
+  transition: all 0.2s;
 }
-
 .change .hamburger-menu:hover span {
   opacity: 1;
   visibility: visible;
 }
-
 .hamburger-menu span::before {
   content: "";
   position: absolute;
   border-left: 1rem solid transparent;
-  border-right: 1rem solid #e2b646;
+  border-right: 1rem solid #E2B646;
   border-bottom: 1rem solid transparent;
   border-top: 1rem solid transparent;
   top: 50%;
   left: -2rem;
   transform: translateY(-50%);
 }
-
 .header {
   width: 100%;
   height: 100vh;
@@ -144,7 +135,7 @@ html {
 .banner button {
   width: 25rem;
   height: 7rem;
-  background-color: #c29525;
+  background-color: #C29525;
   border: none;
   font-family: "Mulish", serif;
   font-size: 2rem;
@@ -177,7 +168,6 @@ html {
 .change .sidebar {
   right: 0;
 }
-
 .menu {
   position: absolute;
   top: 40%;
@@ -198,7 +188,7 @@ html {
   position: absolute;
   top: 0;
   left: 0;
-  color: #c29525;
+  color: #C29525;
   width: 0;
   overflow: hidden;
   white-space: nowrap;
@@ -207,7 +197,6 @@ html {
 .menu-link:hover::before {
   width: 100%;
 }
-
 .social-media {
   position: absolute;
   bottom: 3rem;
@@ -228,34 +217,33 @@ html {
   border-radius: 50%;
   transition: background-color 0.3s;
 }
-
 .social-media i:hover {
-  background-color: #c29525;
+  background-color: #C29525;
 }
-.about-us{
+.about-us {
   width: 100%;
   background-color: #F5F5F5;
   padding-bottom: 15rem;
 }
-.section-header{
+.section-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 7rem 0 10rem 0;
 }
-.section-heading{
-  font-family: 'Mulish', serif;
+.section-heading {
+  font-family: "Mulish", serif;
   font-size: 5rem;
   font-weight: 300;
   color: #4B4B4B;
   margin-bottom: 6rem;
 }
-.underline{
+.underline {
   width: 12rem;
-  height: .3rem;
+  height: 0.3rem;
   background-color: #C29525;
 }
-.services{
+.services {
   width: 100%;
   height: 100%;
   display: grid;
@@ -263,68 +251,149 @@ html {
   grid-template-rows: repeat(6, 6rem);
   grid-row-gap: 4rem;
 }
-.service{
+.service {
   width: 100%;
   margin-bottom: 2rem;
 }
-.service:nth-child(1){
+.service:nth-child(1) {
   grid-column: 4/7;
-grid-row: 1/3;
+  grid-row: 1/3;
 }
-.service:nth-child(2){
+.service:nth-child(2) {
   grid-column: 3/6;
-grid-row: 3/5;
+  grid-row: 3/5;
 }
-.service:nth-child(3){
+.service:nth-child(3) {
   grid-column: 4/7;
-grid-row: 5/-1;
+  grid-row: 5/-1;
 }
-.service:nth-child(4){
+.service:nth-child(4) {
   grid-column: 11/14;
-grid-row: 1/3;
+  grid-row: 1/3;
 }
-.service:nth-child(5){
+.service:nth-child(5) {
   grid-column: 12/15;
-grid-row: 3/5;
+  grid-row: 3/5;
 }
-.service:nth-child(6){
+.service:nth-child(6) {
   grid-column: 11/14;
-grid-row: 5/-1;
+  grid-row: 5/-1;
 }
-.service-header{
+.service-header {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
 }
-.about-us-img-wrapper{
-  grid-column: 7/11;
-  grid-row: 2/6;
-  width: 100%;
-}
-.about-us-img-wrapper img{
-  width: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-
-.section-header{display: flex;
-  align-items: center;
-  margin-bottom: 1rem;}
-
-.section-header i{font-size:3rem;
-  color: #4b4b4b;
+.service-header i {
+  font-size: 4rem;
+  color: #4B4B4B;
   margin-right: 2rem;
-  }
-  
-  .section-header h3 {font-family: 'Baloo Da 2 ',serif;
+}
+.service-header h3 {
+  font-family: "Baloo Da 2", serif;
   font-size: 2.6rem;
   line-height: 2.6rem;
   font-weight: 400;
   margin-bottom: 2rem;
-  }
-
-  .service-text{font-family: 'josefin stab',serif;
+}
+.service-text{
+  font-family: 'Joselin Slab';
   font-size: 1.6rem;
-  text-align: justify;  
-
-  }
+  text-align: justify;
+}
+.about-us-img-wrapper {
+  grid-column: 7/11;
+  grid-row: 2/6;
+  width: 100%;
+}
+.about-us-img-wrapper img {
+  width: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+}
+.team{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5rem 20rem 5rem;
+}
+.cards-wrapper{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 8rem;
+  width: 100%;
+}
+.card{
+  width: 37rem;
+  height: 45rem;
+  box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.4);
+  border-radius: 0.5rem;
+  position: relative;
+}
+.card-img-wrapper{
+  width: 100%;
+  height: 100%;
+  background-color: #262626;
+  border-radius: 0.5rem;
+}
+.card-img-wrapper img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+  border-radius: 0.5rem;
+  transition: opacity 0.3s;
+}
+.card:hover .card-img-wrapper img{
+  opacity: .5;
+}
+.card-info{
+  position: absolute;
+  bottom: 0;
+  padding: 2rem;
+  text-shadow: 0 .2rem .5rem rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+.card:hover .card-info{
+  bottom: 2rem;
+  opacity: 1;
+  visibility: visible;
+}
+.card-info h2{
+  font-family: 'Baloo Da 2', serif;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  font-weight: 300;
+  color: #eee;
+}
+.card-info h3{
+  font-family: 'Mulish', serif;
+  font-size: 2rem;
+  font-weight: 500;
+  color: #A52A2A;
+  margin-bottom: 1rem;
+}
+.card-info p{
+  font-family: 'Baloo Da 2', serif;
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+  font-weight: 300;
+  color: #eee;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+.card-info button {
+  width: 10rem;
+  height: 3rem;
+  background-color: #C29525;
+  border: none;
+  font-family: 'Baloo Da 2', serif;
+  font-size: 1.4rem;
+  line-height: 1.5rem;
+  color: #eee;
+  border-radius: 0.3rem;
+  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
+}
