--- a/style.css
+++ b/style.css
@@ -397,3 +397,10 @@ html {
   border-radius: 0.3rem;
   box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
 }
+.contact{width: 100%;
+height: 100%;
+background-color: #272727;
+display: flex;
+justify-content: center;
+align-items: center;
+}
